# argosy-launcher

./: .gitignore  .gitmodules  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build.yml
app/: build.gradle.kts
app/schemas/com.nendo.argosy.data.local.ALauncherDatabase/: 80.json  81.json
app/src/main/kotlin/com/nendo/argosy/: DualScreenManager.kt  MainActivity.kt  MainActivityPreferencesObserver.kt
app/src/main/kotlin/com/nendo/argosy/data/download/: DownloadManager.kt
app/src/main/kotlin/com/nendo/argosy/data/emulator/: ChdReader.kt  EmulatorRegistry.kt  GameLauncher.kt  PlaySessionTracker.kt  SavePathRegistry.kt  TitleIdExtractor.kt
app/src/main/kotlin/com/nendo/argosy/data/local/: ALauncherDatabase.kt
app/src/main/kotlin/com/nendo/argosy/data/local/dao/: EmulatorConfigDao.kt  GameDao.kt  (+2 more)
app/src/main/kotlin/com/nendo/argosy/data/preferences/: DisplayPreferencesRepository.kt  SessionStateStore.kt  SyncPreferencesRepository.kt  UserPreferencesRepository.kt
app/src/main/kotlin/com/nendo/argosy/data/repository/: GameRepository.kt  RetroAchievementsRepository.kt  SaveSyncApiClient.kt  SaveSyncConflictResolver.kt  SaveSyncRepository.kt
app/src/main/kotlin/com/nendo/argosy/data/social/: ArgosSocialService.kt  SocialModels.kt  SocialRepository.kt
app/src/main/kotlin/com/nendo/argosy/data/sync/: SaveArchiver.kt  SavePathResolver.kt  SyncCoordinator.kt  SyncQueueManager.kt
app/src/main/kotlin/com/nendo/argosy/di/: DatabaseModule.kt
app/src/main/kotlin/com/nendo/argosy/hardware/: ScreenColorExtractor.kt  SecondaryHomeStateManager.kt
app/src/main/kotlin/com/nendo/argosy/libretro/: HotkeyManager.kt  InputConfigCoordinator.kt  LibretroActivity.kt  RetroAchievementsSessionManager.kt
app/src/main/kotlin/com/nendo/argosy/ui/: ArgosyViewModel.kt
app/src/main/kotlin/com/nendo/argosy/ui/components/: BackgroundSyncConflictDialog.kt  MainDrawer.kt  SaveConflictModal.kt
app/src/main/kotlin/com/nendo/argosy/ui/navigation/: NavGraph.kt
app/src/main/kotlin/com/nendo/argosy/ui/notification/: DownloadNotificationObserver.kt
app/src/main/kotlin/com/nendo/argosy/util/: DisplayAffinityHelper.kt  Iso9660Utils.kt  Logger.kt
libchdr/: build.gradle.kts  proguard-rules.pro
libchdr/src/main/cpp/: CMakeLists.txt  chdr_jni.c
libchdr/src/main/kotlin/com/nendo/argosy/libchdr/: ChdReader.kt
(+40 files in other folders)
